--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "name": "toolbox",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Набор утилит для работы",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "tauri": "tauri"
+    "tauri": "tauri",
+    "version:sync": "node scripts/sync-version.js",
+    "version:patch": "node scripts/update-version.js patch",
+    "version:minor": "node scripts/update-version.js minor",
+    "version:major": "node scripts/update-version.js major"
   },
   "dependencies": {
     "@tauri-apps/api": "^2.9.1",
