--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@tauri-apps/api": "^2.9.1",
     "@tauri-apps/plugin-dialog": "^2.0.0",
     "@tauri-apps/plugin-fs": "^2.0.0",
-    "@tauri-apps/plugin-updater": "^2.0.0"
+    "@tauri-apps/plugin-updater": "^2.0.0",
+    "@fal-ai/client": "^1.8.0"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^2.0.0",
