--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "version:major": "node scripts/update-version.js major"
   },
   "dependencies": {
+    "@fal-ai/client": "^1.8.0",
     "@tauri-apps/api": "^2.9.1",
     "@tauri-apps/plugin-dialog": "^2.0.0",
     "@tauri-apps/plugin-fs": "^2.0.0",
     "@tauri-apps/plugin-updater": "^2.0.0",
-    "@fal-ai/client": "^1.8.0"
+    "@vitejs/plugin-react": "^5.1.2",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^2.0.0",
