--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,44 +3,84 @@ name: Release
 on:
   push:
     tags:
-      - 'v*'  # только теги вида v1.0.0
-  workflow_dispatch:             # можно запускать вручную
+      - 'v*'  # Запускается при push тега вида v1.0.0, v1.1.0 и т.д.
+  workflow_dispatch:  # Позволяет запускать вручную из GitHub UI
 
 jobs:
-  release:
-    if: startsWith(github.ref, 'refs/tags/v')  # проверяем, что это тег
-    runs-on: windows-latest
-
+  create-release:
+    permissions:
+      contents: write
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - os: windows-latest
+            platform: 'x64'
+    
     steps:
-      # 1. Клонируем репозиторий
-      - uses: actions/checkout@v4
-
-      # 2. Устанавливаем Node.js
-      - uses: actions/setup-node@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
           node-version: 18
           cache: 'npm'
-
-      # 3. Устанавливаем зависимости фронтенда
-      - run: npm ci
-
-      # 4. Устанавливаем Rust
-      - uses: dtolnay/rust-toolchain@stable
+      
+      - name: Install Rust
+        uses: dtolnay/rust-toolchain@stable
         with:
           toolchain: stable
-
-      # 5. Собираем Tauri-приложение и создаём latest.json
-      - uses: tauri-apps/tauri-action@v0
+      
+      - name: Install dependencies
+        run: npm ci
+      
+      - name: Build the app
+        uses: tauri-apps/tauri-action@v0
+        id: tauri-build
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          # ✅ Обратите внимание: TAURI_SIGNING_PRIVATE_KEY для NSIS
-          TAURI_SIGNING_PRIVATE_KEY: ${{ secrets.TAURI_PRIVATE_KEY }}
           TAURI_PRIVATE_KEY: ${{ secrets.TAURI_PRIVATE_KEY }}
           TAURI_KEY_PASSWORD: ${{ secrets.TAURI_KEY_PASSWORD }}
-          TAURI_SIGNING_PRIVATE_KEY_PASSWORD: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY_PASSWORD }}
         with:
           tagName: ${{ github.ref_name }}
-          releaseName: "Toolbox ${{ github.ref_name }}"
+          releaseName: 'Toolbox ${{ github.ref_name }}'
+          releaseBody: 'See the assets to download this version and install.'
           releaseDraft: false
           prerelease: false
-          includeUpdaterJson: true
+          updaterJsonPath: latest.json
+          projectPath: .
+      
+      - name: Find and upload latest.json
+        if: always()
+        shell: pwsh
+        run: |
+          # Ищем latest.json в возможных местах
+          $jsonPath = $null
+          $possiblePaths = @(
+            "src-tauri\target\release\bundle\nsis\latest.json",
+            "src-tauri\target\release\latest.json",
+            "latest.json"
+          )
+          
+          foreach ($path in $possiblePaths) {
+            if (Test-Path $path) {
+              Write-Host "Found latest.json at: $path"
+              $jsonPath = $path
+              break
+            }
+          }
+          
+          if ($jsonPath) {
+            gh release upload "${{ github.ref_name }}" $jsonPath --repo "${{ github.repository }}"
+            Write-Host "Uploaded latest.json successfully"
+          } else {
+            Write-Host "latest.json not found. Searching..."
+            Get-ChildItem -Recurse -Filter "latest.json" -ErrorAction SilentlyContinue | ForEach-Object {
+              Write-Host "Found: $($_.FullName)"
+            }
+          }
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
