--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@tauri-apps/plugin-updater": "^2.0.0",
     "@vitejs/plugin-react": "^5.1.2",
     "react": "^19.2.3",
-    "react-dom": "^19.2.3"
+    "react-dom": "^19.2.3",
+    "replicate": "^1.4.0"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^2.0.0",
